--- a/siddhi-extensions/nlp/nlp-toolbox/pom.xml
+++ b/siddhi-extensions/nlp/nlp-toolbox/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>nlp-toolbox</artifactId>
-    <packaging>pom</packaging>
+    <packaging>bundle</packaging>
 
     <dependencies>
         <dependency>
