--- a/siddhi-extensions/nlp/stanford-nlp/pom.xml
+++ b/siddhi-extensions/nlp/stanford-nlp/pom.xml
@@ -3,13 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.wso2.siddhi.gpl</groupId>
+        <artifactId>siddhi-extensions</artifactId>
+        <version>2.2.0-SNAPSHOT</version>
+    </parent>
 
-    <artifactId>stanford-nlp-bundle</artifactId>
-    <groupId>org.wso2.siddhi.gpl</groupId>
-    <packaging>bundle</packaging>
-    <name>stanford-nlp.wso2</name>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>stanford-nlp</artifactId>
     <version>3.4.0-wso2v1</version>
+    <packaging>bundle</packaging>
+
+    <name>Siddhi Extension - Stanford NLP Library Bundle</name>
     <description>
         This bundle exports packages stanford-corenlp-3.4.jar and stanford-tregex-3.4.1.jar
     </description>
@@ -49,7 +54,7 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>1.4.0</version>
+                <version>2.3.7</version>
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
