--- a/siddhi-extensions/nlp/stanford-nlp/pom.xml
+++ b/siddhi-extensions/nlp/stanford-nlp/pom.xml
@@ -7,6 +7,7 @@
         <groupId>org.wso2.siddhi.gpl</groupId>
         <artifactId>siddhi-extensions</artifactId>
         <version>2.2.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
