--- a/siddhi-extensions/pom.xml
+++ b/siddhi-extensions/pom.xml
@@ -14,6 +14,7 @@
     <name>Siddhi Extensions</name>
 
     <modules>
+        <module>nlp/stanford-nlp</module>
         <module>nlp</module>
     </modules>
 
