Adding NLP fixes and Geo base

--- a/siddhi-extensions/pom.xml
+++ b/siddhi-extensions/pom.xml
@@ -14,8 +14,8 @@
     <name>Siddhi Extensions</name>
 
     <modules>
-        <module>nlp/stanford-nlp</module>
         <module>nlp</module>
+        <!--<module>geo</module>-->
     </modules>
 
 </project>
