--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,17 @@
 
     <repositories>
         <repository>
+            <id>Stanford-nexus</id>
+            <name>Stanford internal Repository</name>
+            <url>http://mu.lti.cs.cmu.edu:8081/nexus/content/groups/public/</url>
+            <!--<releases>-->
+                <!--<enabled>true</enabled>-->
+                <!--<updatePolicy>daily</updatePolicy>-->
+                <!--<checksumPolicy>ignore</checksumPolicy>-->
+            <!--</releases>-->
+        </repository>
+
+        <repository>
             <id>wso2-nexus</id>
             <name>WSO2 internal Repository</name>
             <url>http://maven.wso2.org/nexus/content/groups/wso2-public/</url>
