--- a/siddhi-extensions/geo/pom.xml
+++ b/siddhi-extensions/geo/pom.xml
@@ -2,19 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <parent>
-        <groupId>org.wso2.siddhi.gpl</groupId>
         <artifactId>siddhi-extensions</artifactId>
+        <groupId>org.wso2.siddhi.gpl</groupId>
         <version>2.2.0-SNAPSHOT</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>nlp</artifactId>
+
+    <artifactId>geo</artifactId>
+
     <packaging>bundle</packaging>
 
-    <name>Siddhi Extension - Natural Language Processing</name>
-    <description>This is a Siddhi extension that enable natural language processing capability</description>
+    <name>Siddhi Extension - Geo fencing</name>
+    <description>This is a Siddhi extension that enable Geo fencing capability</description>
     <url>http://wso2.org</url>
 
     <dependencies>
@@ -29,11 +29,6 @@
         <dependency>
             <groupId>org.wso2.siddhi</groupId>
             <artifactId>siddhi-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>edu.stanford.nlp.wso2</groupId>
-            <artifactId>stanford-nlp</artifactId>
-            <version>3.4.0-wso2v1</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
@@ -58,7 +53,7 @@
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Name>${project.artifactId}</Bundle-Name>
                         <Export-Package>
-                            org.wso2.siddhi.gpl.extension.nlp.*
+                            org.wso2.siddhi.gpl.extension.geo.*
                         </Export-Package>
                         <Import-Package>
                             *;resolution:=optional
@@ -69,4 +64,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
