--- a/siddhi-extensions/geo/geo-within-operation/pom.xml
+++ b/siddhi-extensions/geo/geo-within-operation/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -9,7 +9,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <name>Siddhi Extension - Geo `within` operation</name>
-    <description>This is a Siddhi extension that check a given point(Latitude,Longitude) with a polygon(geoJson) for within
+    <description>This is a Siddhi extension that check a given point(Latitude,Longitude) with a polygon(geoJson) for
+        within
         condition, if given point is within the given polygon it returns true , else otherwise
     </description>
     <url>http://wso2.org</url>
