--- a/siddhi-extensions/nlp/pom.xml
+++ b/siddhi-extensions/nlp/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.wso2.siddhi.gpl</groupId>
         <artifactId>siddhi-extensions</artifactId>
-        <version>2.2.0-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -20,11 +20,11 @@
     <dependencies>
         <dependency>
             <groupId>org.wso2.siddhi</groupId>
-            <artifactId>siddhi-api</artifactId>
+            <artifactId>siddhi-query-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.wso2.siddhi</groupId>
-            <artifactId>siddhi-query</artifactId>
+            <artifactId>siddhi-query-compiler</artifactId>
         </dependency>
         <dependency>
             <groupId>org.wso2.siddhi</groupId>
@@ -33,7 +33,6 @@
         <dependency>
             <groupId>edu.stanford.nlp.wso2</groupId>
             <artifactId>stanford-nlp</artifactId>
-            <version>3.4.0-wso2v1</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
