--- a/siddhi-extensions/pom.xml
+++ b/siddhi-extensions/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.wso2.siddhi.gpl</groupId>
         <artifactId>siddhi</artifactId>
-        <version>2.2.0-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
@@ -14,7 +14,7 @@
     <name>Siddhi Extensions</name>
 
     <modules>
-        <module>nlp</module>
+        <!--<module>nlp</module>-->
         <!--<module>geo</module>-->
     </modules>
 
