R extensions ported to Siddhi-3.0.0

--- a/siddhi-extensions/pom.xml
+++ b/siddhi-extensions/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <!--<module>nlp</module>-->
         <!--<module>geo</module>-->
+        <!--<module>r</module>-->
     </modules>
 
 </project>
