--- a/siddhi-extensions/eval-script/pom.xml
+++ b/siddhi-extensions/eval-script/pom.xml
@@ -6,12 +6,13 @@
         <artifactId>siddhi-extensions</artifactId>
         <groupId>org.wso2.siddhi.gpl</groupId>
         <version>3.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>bundle</packaging>
 
-    <groupId>org.wso2.siddhi.gpl.extension</groupId>
-    <artifactId>r</artifactId>
-
+    <artifactId>eval-script</artifactId>
+    <name>Siddhi Extension - Evaluate Scripts</name>
     <dependencies>
         <dependency>
             <groupId>org.wso2.siddhi</groupId>
@@ -24,6 +25,11 @@
         <dependency>
             <groupId>org.wso2.siddhi</groupId>
             <artifactId>siddhi-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.siddhi</groupId>
+            <artifactId>eval-script</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.lucarosellini.rJava</groupId>
@@ -61,7 +67,7 @@
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Name>${project.artifactId}</Bundle-Name>
                         <Export-Package>
-                            org.wso2.siddhi.gpl.extension.r.*
+                            org.wso2.siddhi.gpl.extension.evalscript.*
                         </Export-Package>
                         <Import-Package>
                             *;resolution:=optional
