--- a/siddhi-extensions/r/pom.xml
+++ b/siddhi-extensions/r/pom.xml
@@ -11,6 +11,7 @@
 
     <groupId>org.wso2.siddhi.gpl.extension</groupId>
     <artifactId>r</artifactId>
+    <name>Siddhi Extension - R</name>
 
     <dependencies>
         <dependency>
