--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,31 @@
                 <artifactId>stanford-nlp</artifactId>
                 <version>${stanford-nlp.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>com.github.lucarosellini.rJava</groupId>
+                <artifactId>JRI</artifactId>
+                <version>${rjava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.lucarosellini.rJava</groupId>
+                <artifactId>JRIEngine</artifactId>
+                <version>${rjava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.lucarosellini.rJava</groupId>
+                <artifactId>REngine</artifactId>
+                <version>${rjava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.geotools</groupId>
+                <artifactId>gt-geojson</artifactId>
+                <version>${geotools.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.wso2.siddhi</groupId>
@@ -134,6 +158,12 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>2.8</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>maven-bundle-plugin</artifactId>
+                    <version>2.3.7</version>
+                    <extensions>true</extensions>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -195,6 +225,10 @@
         <mvel2.version>2.0.19</mvel2.version>
         <stanford-nlp.version>3.4.0-wso2v1</stanford-nlp.version>
         <antlr.runtime.version>3.4</antlr.runtime.version>
+        <rjava.version>0.9-7</rjava.version>
+        <gson.version>2.2.4</gson.version>
+        <geotools.version>13-RC1</geotools.version>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -208,5 +242,21 @@
             </archive>
         </mailingList>
     </mailingLists>
+
+    <repositories>
+        <repository>
+            <id>osgeo</id>
+            <name>Open Source Geospatial Foundation Repository</name>
+            <url>http://download.osgeo.org/webdav/geotools/</url>
+        </repository>
+        <repository>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <id>opengeo</id>
+            <name>OpenGeo Maven Repository</name>
+            <url>http://repo.opengeo.org</url>
+        </repository>
+    </repositories>
 
 </project>
