--- a/siddhi-extensions/pom.xml
+++ b/siddhi-extensions/pom.xml
@@ -14,12 +14,12 @@
     <name>Siddhi Extensions</name>
 
     <modules>
-        <!--<module>nlp/stanford-tregex-installer</module>-->
-        <!--<module>nlp/stanford-nlp</module>-->
-        <!--<module>nlp</module>-->
+        <module>nlp/stanford-tregex-installer</module>
+        <module>nlp/stanford-nlp</module>
+        <module>nlp</module>
         <module>geo</module>
         <module>r</module>
-        <!--<module>eval-script</module>-->
+        <module>eval-script</module>
     </modules>
 
 </project>
