--- a/siddhi-extensions/r/pom.xml
+++ b/siddhi-extensions/r/pom.xml
@@ -3,13 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>siddhi-extensions</artifactId>
         <groupId>org.wso2.siddhi.gpl</groupId>
+        <artifactId>siddhi-extensions</artifactId>
         <version>3.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>org.wso2.siddhi.gpl.extension</groupId>
+    <packaging>bundle</packaging>
     <artifactId>r</artifactId>
     <name>Siddhi Extension - R</name>
 
@@ -55,7 +54,8 @@
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Name>${project.artifactId}</Bundle-Name>
                         <Export-Package>
-                            org.wso2.siddhi.gpl.extension.r.*
+                            org.wso2.siddhi.gpl.extension.r.*,
+                            org.rosuda.*;-split-package:=merge-last
                         </Export-Package>
                         <Import-Package>
                             *;resolution:=optional
