--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,13 @@
         <artifactId>wso2</artifactId>
         <version>1</version>
     </parent>
+    <url>http://wso2.org</url>
 
     <groupId>org.wso2.siddhi.gpl</groupId>
     <artifactId>siddhi</artifactId>
     <packaging>pom</packaging>
     <version>3.0.0-SNAPSHOT</version>
+
     <name>Siddhi GPL</name>
     <description>Siddhi, high performing Complex Event Processing Engine</description>
 
