--- a/siddhi-extensions/eval-script/pom.xml
+++ b/siddhi-extensions/eval-script/pom.xml
@@ -10,6 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>bundle</packaging>
+    <url>http://wso2.org</url>
 
     <artifactId>eval-script</artifactId>
     <name>Siddhi Extension - Evaluate Scripts</name>
