--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ Copyright (C) 2015 WSO2 Inc. (http://wso2.com)
+  ~
+  ~ This program is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ This program is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
+  -->
+
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -87,29 +104,19 @@
                 <version>${stanford-nlp.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.github.lucarosellini.rJava</groupId>
-                <artifactId>JRI</artifactId>
-                <version>${rjava.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.github.lucarosellini.rJava</groupId>
-                <artifactId>JRIEngine</artifactId>
-                <version>${rjava.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.github.lucarosellini.rJava</groupId>
-                <artifactId>REngine</artifactId>
-                <version>${rjava.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>${gson.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.geotools</groupId>
+                <groupId>org.geotools.wso2</groupId>
                 <artifactId>gt-geojson</artifactId>
                 <version>${geotools.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.lucarosellini.rJava.wso2</groupId>
+                <artifactId>r-java</artifactId>
+                <version>${rjava.version}</version>
             </dependency>
 
             <dependency>
@@ -225,11 +232,11 @@
         <junit.version>4.10</junit.version>
         <log4j.version>1.2.14</log4j.version>
         <mvel2.version>2.0.19</mvel2.version>
-        <stanford-nlp.version>3.4.0-wso2v1</stanford-nlp.version>
         <antlr.runtime.version>3.4</antlr.runtime.version>
-        <rjava.version>0.9-7</rjava.version>
         <gson.version>2.2.4</gson.version>
-        <geotools.version>13-RC1</geotools.version>
+        <rjava.version>0.9.7-wso2v1</rjava.version>
+        <geotools.version>13.0.0-wso2v1</geotools.version>
+        <stanford-nlp.version>3.4.0-wso2v1</stanford-nlp.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
