--- a/siddhi-extensions/geo/pom.xml
+++ b/siddhi-extensions/geo/pom.xml
@@ -1,4 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ Copyright (C) 2015 WSO2 Inc. (http://wso2.com)
+  ~
+  ~ This program is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ This program is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
+  -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -12,7 +29,7 @@
     <packaging>bundle</packaging>
     <url>http://wso2.org</url>
 
-    <artifactId>geo</artifactId>
+    <artifactId>siddhi-gpl-extension-geo</artifactId>
     <name>Siddhi Extension - Geo</name>
 
     <description>
@@ -85,7 +102,7 @@
             <artifactId>gson</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.geotools</groupId>
+            <groupId>org.geotools.wso2</groupId>
             <artifactId>gt-geojson</artifactId>
         </dependency>
     </dependencies>
@@ -99,11 +116,9 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                        <Bundle-Name>${project.artifactId}</Bundle-Name>
                         <Export-Package>
-                            com.vividsolutions.*,
-                            org.jdom.*,
-                            javax.media.*,
-                            org.geotools.*;-split-package:=merge-last,
                             org.wso2.siddhi.gpl.extensions.geo.*
                         </Export-Package>
                         <Private-Package>
