--- a/siddhi-extensions/r/pom.xml
+++ b/siddhi-extensions/r/pom.xml
@@ -1,4 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ Copyright (C) 2015 WSO2 Inc. (http://wso2.com)
+  ~
+  ~ This program is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ This program is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
+  -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -9,7 +26,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>bundle</packaging>
-    <artifactId>r</artifactId>
+    <artifactId>siddhi-gpl-extension-r</artifactId>
     <name>Siddhi Extension - R</name>
 
     <dependencies>
@@ -26,16 +43,8 @@
             <artifactId>siddhi-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.lucarosellini.rJava</groupId>
-            <artifactId>JRI</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.github.lucarosellini.rJava</groupId>
-            <artifactId>JRIEngine</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.github.lucarosellini.rJava</groupId>
-            <artifactId>REngine</artifactId>
+            <groupId>com.github.lucarosellini.rJava.wso2</groupId>
+            <artifactId>r-java</artifactId>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -54,8 +63,7 @@
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Name>${project.artifactId}</Bundle-Name>
                         <Export-Package>
-                            org.wso2.siddhi.gpl.extension.r.*,
-                            org.rosuda.*;-split-package:=merge-last
+                            org.wso2.siddhi.gpl.extension.r.*
                         </Export-Package>
                         <Import-Package>
                             *;resolution:=optional
