--- a/siddhi-extensions/pmml/pom.xml
+++ b/siddhi-extensions/pmml/pom.xml
@@ -65,6 +65,11 @@
 			<artifactId>pmml-evaluator</artifactId>
 			<version>${jpmml.model.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
