--- a/siddhi-extensions/eval-script/pom.xml
+++ b/siddhi-extensions/eval-script/pom.xml
@@ -51,7 +51,7 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.github.lucarosellini.rJava.wso2</groupId>
+            <groupId>org.wso2.orbit.com.github.lucarosellini.rJava</groupId>
             <artifactId>r-java</artifactId>
         </dependency>
         <dependency>
