--- a/pom.xml
+++ b/pom.xml
@@ -142,17 +142,17 @@
             <dependency>
                 <groupId>org.wso2.siddhi</groupId>
                 <artifactId>siddhi-query-api</artifactId>
-                <version>${project.version}</version>
+                <version>${siddhi.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.wso2.siddhi</groupId>
                 <artifactId>siddhi-query-compiler</artifactId>
-                <version>${project.version}</version>
+                <version>${siddhi.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.wso2.siddhi</groupId>
                 <artifactId>siddhi-core</artifactId>
-                <version>${project.version}</version>
+                <version>${siddhi.version}</version>
                 <scope>compile</scope>
             </dependency>
         </dependencies>
@@ -259,6 +259,7 @@
         <stanford-nlp.version>3.4.0.wso2v1</stanford-nlp.version>
         <jpmml.model.version>1.1.16.wso2v1</jpmml.model.version>
         <jpmml.manager.version>1.1.16.wso2v1</jpmml.manager.version>
+        <siddhi.version>3.0.0</siddhi.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
