--- a/siddhi-extensions/pmml/pom.xml
+++ b/siddhi-extensions/pmml/pom.xml
@@ -44,6 +44,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.wso2.orbit.org.jpmml</groupId>
@@ -64,7 +65,6 @@
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
-			<version>1.1.1</version>
 		</dependency>
 	</dependencies>
 
@@ -86,14 +86,6 @@
 						</Import-Package>
 						<DynamicImport-Package>*</DynamicImport-Package>
 					</instructions>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.13</version>
-				<configuration>
-					<argLine>-Djava.library.path=${env.JRI_HOME}</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
