--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <groupId>org.wso2.siddhi.gpl</groupId>
     <artifactId>siddhi</artifactId>
     <packaging>pom</packaging>
-    <version>3.0.0</version>
+    <version>3.0.1-SNAPSHOT</version>
 
     <name>Siddhi GPL</name>
     <description>Siddhi, high performing Complex Event Processing Engine</description>
@@ -49,7 +49,7 @@
         <url>https://github.com/wso2-gpl/siddhi.git</url>
         <developerConnection>scm:git:https://github.com/wso2-gpl/siddhi.git</developerConnection>
         <connection>scm:git:https://github.com/wso2-gpl/siddhi.git</connection>
-        <tag>v3.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencyManagement>
