--- a/siddhi-extensions/r/pom.xml
+++ b/siddhi-extensions/r/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.wso2.siddhi.gpl</groupId>
         <artifactId>siddhi-extensions</artifactId>
-        <version>3.0.0</version>
+        <version>3.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>bundle</packaging>
