Stanford NLP Sentiment Functionality Added

--- a/nlp/pom.xml
+++ b/nlp/pom.xml
@@ -50,6 +50,17 @@
             <artifactId>siddhi-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>edu.stanford.nlp</groupId>
+            <artifactId>stanford-corenlp</artifactId>
+            <version>3.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>edu.stanford.nlp</groupId>
+            <artifactId>stanford-corenlp</artifactId>
+            <version>3.6.0</version>
+            <classifier>models</classifier>
+        </dependency>
+        <dependency>
             <groupId>org.wso2.orbit.edu.stanford.nlp</groupId>
             <artifactId>stanford-nlp</artifactId>
         </dependency>
