--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (C) 2015 WSO2 Inc. (http://wso2.com)
+  ~ Copyright (c) 2016, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
   ~
-  ~ This program is free software: you can redistribute it and/or modify
-  ~ it under the terms of the GNU General Public License as published by
-  ~ the Free Software Foundation, either version 3 of the License, or
-  ~ (at your option) any later version.
+  ~ WSO2 Inc. licenses this file to you under the Apache License,
+  ~ Version 2.0 (the "License"); you may not use this file except
+  ~ in compliance with the License.
+  ~ You may obtain a copy of the License at
   ~
-  ~ This program is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~ GNU General Public License for more details.
+  ~   http://www.apache.org/licenses/LICENSE-2.0
   ~
-  ~ You should have received a copy of the GNU General Public License
-  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
+  ~ Unless required by applicable law or agreed to in writing,
+  ~ software distributed under the License is distributed on an
+  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+  ~ KIND, either express or implied.  See the License for the
+  ~ specific language governing permissions and limitations
+  ~ under the License.
   -->
 
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -148,6 +149,11 @@
                 <artifactId>commons-logging</artifactId>
                 <version>${commons.logging.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.wso2.orbit.joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>${joda.time.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.wso2.siddhi</groupId>
@@ -259,18 +265,19 @@
     </build>
 
     <properties>
-        <siddhi.version>3.1.1-SNAPSHOT</siddhi.version>
+        <siddhi.version>3.1.1</siddhi.version>
         <junit.version>4.10</junit.version>
         <log4j.version>1.2.14</log4j.version>
         <mvel2.version>2.0.19</mvel2.version>
         <antlr.runtime.version>3.4</antlr.runtime.version>
         <gson.version>2.2.4</gson.version>
         <rjava.version>0.9.7.wso2v1</rjava.version>
-        <geotools.version>13.0.0.wso2v1</geotools.version>
-        <stanford-nlp.version>3.4.0.wso2v1</stanford-nlp.version>
+        <geotools.version>13.6.0.wso2v1</geotools.version>
+        <stanford-nlp.version>3.6.0.wso2v1</stanford-nlp.version>
         <jpmml.model.version>1.1.16.wso2v1</jpmml.model.version>
         <jpmml.manager.version>1.1.16.wso2v1</jpmml.manager.version>
         <commons.logging.version>1.1.1</commons.logging.version>
+        <joda.time.version>2.8.2.wso2v1</joda.time.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
